WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
264744
REGRESSION(
270320@main
): Speedometer3/Editor-TipTap 4-6%
https://bugs.webkit.org/show_bug.cgi?id=264744
Summary
REGRESSION(270320@main): Speedometer3/Editor-TipTap 4-6%
Chris Dumez
Reported
2023-11-13 08:10:11 PST
Speedometer3/Editor-TipTap regressed by ~6% due to WeakPtr adoption in
270320@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2023-11-13 08:10:27 PST
<
rdar://118312367
>
Chris Dumez
Comment 2
2023-11-13 08:13:50 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20417
EWS
Comment 3
2023-11-13 10:27:54 PST
Committed
270646@main
(7c1250d993d6): <
https://commits.webkit.org/270646@main
> Reviewed commits have been landed. Closing PR #20417 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug