REGRESSION(270320@main): Speedometer3/Editor-TipTap 4-6% https://bugs.webkit.org/show_bug.cgi?id=264744 rdar://118312367

Unreviewed, partial revert of 270320@main to address the Speedometer
regression. In 270320@main, I had converted all remaining
CheckedPtr<Font> to WeakPtr<Font> to address crashes. However, we
didn't need to convert GlyphData's font data member. Reverting this
part of the change doesn't regress the layout test introduced in
270320@main but I have confirmed that it resolves the Speedometer
regression.

* Source/WebCore/platform/graphics/Font.h:
* Source/WebCore/platform/graphics/FontCascade.cpp:
(WebCore::FontCascade::emphasisMarkAscent const):
(WebCore::FontCascade::emphasisMarkDescent const):
(WebCore::FontCascade::drawEmphasisMarks const):
* Source/WebCore/platform/graphics/FontCascadeFonts.cpp:
(WebCore::MixedFontGlyphPage::setGlyphDataForIndex):
* Source/WebCore/platform/graphics/GlyphPage.h:

Canonical link: https://commits.webkit.org/270646@main